<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

>
    <RelativeLayout
            android:id="@+id/rl_evet_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

       <!-- <RelativeLayout android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="@dimen/_24sdp"
                        android:layout_marginRight="@dimen/_24sdp"
                        android:background="@drawable/reatangle_all_rounded_corner">

        </RelativeLayout>-->
            <ImageView
                    android:id="@+id/img_cake"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/_24sdp"
                    android:layout_marginRight="@dimen/_24sdp"
                    android:scaleType="fitXY"


            />

            <TextView
                    android:id="@+id/tv_offprice"
                    android:layout_width="@dimen/_90sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_alignParentRight="true"
                    android:text="@string/priceoff"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:textSize="@dimen/_14sdp"
                    android:padding="@dimen/_3sdp"
                    android:visibility="gone"
                    android:background="@drawable/yellow_ribbon"
                    android:layout_margin="@dimen/_14sdp"/>
            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_130sdp"
                    android:layout_alignParentBottom="true"
                    android:layout_marginLeft="@dimen/_24sdp"
                    android:layout_marginRight="@dimen/_24sdp"
                    android:background="@drawable/shadoedg">
                <RelativeLayout android:layout_width="match_parent"
                          android:layout_height="match_parent"
                          android:layout_alignParentBottom="true"
                android:background="@drawable/reatangle_bottom_lf_two_rounded_corner"/>
                <TextView
                        android:id="@+id/tv_product_currentprice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginRight="@dimen/_4sdp"
                        android:layout_marginBottom="@dimen/_7sdp"
                        android:text="@string/price"
                        android:textSize="@dimen/_11sdp"
                        android:drawableLeft="@drawable/rs_yellow"
                        android:drawablePadding="@dimen/_3sdp"
                        android:textColor="@color/btn_color"/>
                <TextView
                        android:id="@+id/tv_product_originalprice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"

                        android:layout_marginRight="@dimen/_4sdp"
                        android:layout_marginBottom="@dimen/_5sdp"
                        android:layout_above="@+id/tv_product_currentprice"
                        android:text="@string/price"
                        android:textSize="@dimen/_12sdp"
                        android:visibility="invisible"
                        android:textColor="@color/btn_color"/>
                <TextView android:id="@+id/tv_avalibility"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:layout_alignParentBottom="true"
                          android:layout_marginBottom="@dimen/_5sdp"
                          android:layout_marginLeft="@dimen/_4sdp"
                          android:layout_marginTop="@dimen/_3sdp"
                          android:text="@string/avalibility"
                          android:textSize="@dimen/_10sdp"

                />
                <LinearLayout
                        android:id="@+id/ll_reating"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginBottom="@dimen/_1sdp"
                        android:layout_marginLeft="@dimen/_4sdp"
                        android:layout_above="@+id/tv_avalibility">
                    <TextView
                            android:id="@+id/tv_avaragerating"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="0.0"
                            android:paddingLeft="@dimen/_5sdp"


                            android:paddingRight="@dimen/_5sdp"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_11sdp"
                            android:drawableRight="@drawable/rating"
                            android:drawablePadding="@dimen/_2sdp"
                            android:background="@drawable/rectangle_feild_bg_green_"/>
                    <TextView
                            android:id="@+id/tv_ratingcount"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/_5sdp"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_9sdp"
                            android:text="55 rating "
                    />
                    <TextView
                            android:id="@+id/tv_reviewcount"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/_5sdp"
                            android:textColor="@color/white"
                            android:textSize="@dimen/_9sdp"
                            android:text="55 reviews"/>
                </LinearLayout>

                <TextView
                        android:id="@+id/tv_product_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_above="@+id/ll_reating"
                        android:layout_marginBottom="@dimen/_2sdp"
                        android:textSize="@dimen/_11sdp"
                        android:textColor="@color/white"
                        android:layout_marginLeft="@dimen/_6sdp"/>


        </RelativeLayout>
    </RelativeLayout>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/_4sdp"
    />
    <!--   <RelativeLayout android:layout_width="match_parent"
                       android:layout_height="0dp"
       android:layout_weight="1"
       android:visibility="invisible"></RelativeLayout>-->


</LinearLayout>